// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linked-appeals GET /change-appeal-type/unlink-appeal should render the unlink-appeal page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate=null>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Do you want to unlink the appeal 725284 from appeal 351062?</h1>
                        </legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="unlink-appeal" name="unlinkAppeal"
                                type="radio" value="yes">
                                <label class="govuk-label govuk-radios__label" for="unlink-appeal">Yes</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="unlink-appeal-2" name="unlinkAppeal"
                                type="radio" value="no">
                                <label class="govuk-label govuk-radios__label" for="unlink-appeal-2">No</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/add should render the add linked appeal reference page with the expected content, and a back link to the case details page 1`] = `
"<body class="govuk-template__body">
    <script nonce="EdcOUaJ8lczj9tIPO0lPow==">
        document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
    </script><a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
    <header     class="govuk-header govuk-!-margin-bottom-0" id="pins-applications-header"
    role="banner" data-module="govuk-header">
        <div class="govuk-width-container">
            <div class="pins-row">
                <div class="pins-column--left">
                    <div class="pins-header__logo"><i class="pins-header__logo-crown"></i>
                    </div><span>Planning Inspectorate</span>
                </div>
                <div class="pins-column--central">
                    <p class="pins-header-domainname govuk-!-margin-top-1">Manage appeals</p>
                    <nav class="govuk-header__navigation pins-header-navigation"
                    aria-label="Menu">
                        <ul class="govuk-header__navigation-list">
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/personal-list">Assigned to me</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/all-cases">All cases</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/auth/signout">Sign out</a>
                            </li>
                        </ul>
                    </nav>
                </div>
            </div>
        </div>
        </header>
        <div class="govuk-width-container govuk-width-container">
            <div class="govuk-phase-banner">
                <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag"> Beta</strong>
                    <span                     class="govuk-phase-banner__text">This is a new service. Help us improve it and <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=mN94WIhvq0iTIpmM5VcIjYt1ax_BPvtOqhVjfvzyJN5UQzNVQjdaV0U0TDdTOE1LNktBT0w5NEQ1Vy4u"
                        class="govuk-link" target="_blank" rel="noopener noreferrer">give your feedback (opens in a new tab)</a>.</span>
                </p>
            </div><a href="/appeals-service/appeal-details/1" class="govuk-back-link">Back</a>
            <main             class="govuk-main-wrapper" id="main-content">
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
                    </div>
                </div>
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds">
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <form method="POST" novalidate="novalidate">
                                    <div class="govuk-form-group">
                                        <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> What is the appeal reference?</label></h1>
                                        <input class="govuk-input govuk-input govuk-input--width-10" id="appeal-reference"
                                        name="appeal-reference" type="text">
                                    </div>
                                    <button type="submit" data-prevent-double-click="true" class="govuk-button"
                                    data-module="govuk-button">Continue</button>
                                </form>
                            </div>
                        </div>
                    </div>
                </div>
                </main>
        </div>
        <footer class="govuk-footer" role="contentinfo">
            <div class="govuk-width-container ">
                <div class="govuk-footer__meta">
                    <div class="govuk-footer__meta-item govuk-footer__meta-item"></div>
                </div>
            </div>
        </footer>
</body>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page with a summary list displaying information about the linking candidate appeal, and a back link to the add linked appeal reference page 1`] = `
"<body class="govuk-template__body">
    <script nonce="EdcOUaJ8lczj9tIPO0lPow==">
        document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
    </script><a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
    <header     class="govuk-header govuk-!-margin-bottom-0" id="pins-applications-header"
    role="banner" data-module="govuk-header">
        <div class="govuk-width-container">
            <div class="pins-row">
                <div class="pins-column--left">
                    <div class="pins-header__logo"><i class="pins-header__logo-crown"></i>
                    </div><span>Planning Inspectorate</span>
                </div>
                <div class="pins-column--central">
                    <p class="pins-header-domainname govuk-!-margin-top-1">Manage appeals</p>
                    <nav class="govuk-header__navigation pins-header-navigation"
                    aria-label="Menu">
                        <ul class="govuk-header__navigation-list">
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/personal-list">Assigned to me</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/all-cases">All cases</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/auth/signout">Sign out</a>
                            </li>
                        </ul>
                    </nav>
                </div>
            </div>
        </div>
        </header>
        <div class="govuk-width-container govuk-width-container">
            <div class="govuk-phase-banner">
                <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag"> Beta</strong>
                    <span                     class="govuk-phase-banner__text">This is a new service. Help us improve it and <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=mN94WIhvq0iTIpmM5VcIjYt1ax_BPvtOqhVjfvzyJN5UQzNVQjdaV0U0TDdTOE1LNktBT0w5NEQ1Vy4u"
                        class="govuk-link" target="_blank" rel="noopener noreferrer">give your feedback (opens in a new tab)</a>.</span>
                </p>
            </div><a href="/appeals-service/appeal-details/1/linked-appeals/add" class="govuk-back-link">Back</a>
            <main             class="govuk-main-wrapper" id="main-content">
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
                        <h1 class="govuk-heading-l">Details of the appeal you&#39;re linking to</h1>
                    </div>
                </div>
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds">
                        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                                <dd class="govuk-summary-list__value">TEST-12345</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal status</dt>
                                <dd class="govuk-summary-list__value">Assign case officer</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                                <dd class="govuk-summary-list__value">Householder</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                                <dd class="govuk-summary-list__value">96 The Avenue, Maidstone, Kent, MD21 5XY</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                                <dd                                 class="govuk-summary-list__value">Wiltshire Council</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                                <dd class="govuk-summary-list__value">Roger Simmons</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                                <dd class="govuk-summary-list__value">Eva Sharma (Eva Sharma Ltd)</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Submission date</dt>
                                <dd class="govuk-summary-list__value">21 February 2024</dd>
                            </div>
                        </dl>
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <form method="post" novalidate="novalidate">
                                    <div class="govuk-form-group">
                                        <fieldset class="govuk-fieldset">
                                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Is this the appeal you want to link?</legend>
                                            <div class="govuk-radios"
                                            data-module="govuk-radios">
                                                <div class="govuk-radios__item">
                                                    <input class="govuk-radios__input" id="confirmation" name="confirmation"
                                                    type="radio" value="lead">
                                                    <label class="govuk-label govuk-radios__label" for="confirmation">Yes, make this the lead appeal for 351062</label>
                                                </div>
                                                <div class="govuk-radios__item">
                                                    <input class="govuk-radios__input" id="confirmation-2" name="confirmation"
                                                    type="radio" value="child">
                                                    <label class="govuk-label govuk-radios__label" for="confirmation-2">Yes, this is a child appeal of 351062</label>
                                                </div>
                                                <div class="govuk-radios__divider">or</div>
                                                <div class="govuk-radios__item">
                                                    <input class="govuk-radios__input" id="confirmation-4" name="confirmation"
                                                    type="radio" value="cancel">
                                                    <label class="govuk-label govuk-radios__label" for="confirmation-4">No, return to search</label>
                                                </div>
                                            </div>
                                        </fieldset>
                                    </div>
                                    <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
                                </form>
                            </div>
                        </div>
                    </div>
                </div>
                </main>
        </div>
        <footer class="govuk-footer" role="contentinfo">
            <div class="govuk-width-container ">
                <div class="govuk-footer__meta">
                    <div class="govuk-footer__meta-item govuk-footer__meta-item"></div>
                </div>
            </div>
        </footer>
</body>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page with appropriate warning text, no radio options, and a button linking back to the add linked appeal reference page with label text of "return to search", if the appeals are already linked 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Details of the appeal you&#39;re linking to</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> Appeals already linked.</strong>
            </div>
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                    <dd class="govuk-summary-list__value">TEST-12345</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal status</dt>
                    <dd class="govuk-summary-list__value">Assign case officer</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                    <dd class="govuk-summary-list__value">Householder</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                    <dd class="govuk-summary-list__value">96 The Avenue, Maidstone, Kent, MD21 5XY</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                    <dd                     class="govuk-summary-list__value">Wiltshire Council</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                    <dd class="govuk-summary-list__value">Roger Simmons</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                    <dd class="govuk-summary-list__value">Eva Sharma (Eva Sharma Ltd)</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Submission date</dt>
                    <dd class="govuk-summary-list__value">21 February 2024</dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate"><a href="/appeals-service/appeal-details/1/linked-appeals/add" role="button"
                        draggable="false" class="govuk-button" data-module="govuk-button"> Return to search</a>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page with appropriate warning text, no radio options, and a button linking back to the add linked appeal reference page with label text of "return to search", if the appeals are not already linked and the linking target is a child appeal and the linking candidate is a lead appeal 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Details of the appeal you&#39;re linking to</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> Appeal already a lead
                    appeal. Cannot be linked.</strong>
            </div>
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                    <dd class="govuk-summary-list__value">TEST-12345</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal status</dt>
                    <dd class="govuk-summary-list__value">Assign case officer</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                    <dd class="govuk-summary-list__value">Householder</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                    <dd class="govuk-summary-list__value">96 The Avenue, Maidstone, Kent, MD21 5XY</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                    <dd                     class="govuk-summary-list__value">Wiltshire Council</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                    <dd class="govuk-summary-list__value">Roger Simmons</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                    <dd class="govuk-summary-list__value">Eva Sharma (Eva Sharma Ltd)</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Submission date</dt>
                    <dd class="govuk-summary-list__value">21 February 2024</dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate"><a href="/appeals-service/appeal-details/1/linked-appeals/add" role="button"
                        draggable="false" class="govuk-button" data-module="govuk-button"> Return to search</a>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page with appropriate warning text, no radio options, and a button linking back to the add linked appeal reference page with label text of "return to search", if the linking target and candidate are both lead appeals 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Details of the appeal you&#39;re linking to</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> Appeals are both lead
                    appeals and cannot be linked.</strong>
            </div>
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                    <dd class="govuk-summary-list__value">TEST-12345</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal status</dt>
                    <dd class="govuk-summary-list__value">Assign case officer</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                    <dd class="govuk-summary-list__value">Householder</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                    <dd class="govuk-summary-list__value">96 The Avenue, Maidstone, Kent, MD21 5XY</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                    <dd                     class="govuk-summary-list__value">Wiltshire Council</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                    <dd class="govuk-summary-list__value">Roger Simmons</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                    <dd class="govuk-summary-list__value">Eva Sharma (Eva Sharma Ltd)</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Submission date</dt>
                    <dd class="govuk-summary-list__value">21 February 2024</dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate"><a href="/appeals-service/appeal-details/1/linked-appeals/add" role="button"
                        draggable="false" class="govuk-button" data-module="govuk-button"> Return to search</a>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page with appropriate warning text, no radio options, and a button linking back to the add linked appeal reference page with label text of "return to search", if the linking target has no linked appeals and the linking candidate is a child appeal 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Details of the appeal you&#39;re linking to</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> Link your case to the
                    lead of this appeal.</strong>
            </div>
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                    <dd class="govuk-summary-list__value">TEST-12345</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal status</dt>
                    <dd class="govuk-summary-list__value">Assign case officer</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                    <dd class="govuk-summary-list__value">Householder</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                    <dd class="govuk-summary-list__value">96 The Avenue, Maidstone, Kent, MD21 5XY</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                    <dd                     class="govuk-summary-list__value">Wiltshire Council</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                    <dd class="govuk-summary-list__value">Roger Simmons</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                    <dd class="govuk-summary-list__value">Eva Sharma (Eva Sharma Ltd)</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Submission date</dt>
                    <dd class="govuk-summary-list__value">21 February 2024</dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate"><a href="/appeals-service/appeal-details/1/linked-appeals/add" role="button"
                        draggable="false" class="govuk-button" data-module="govuk-button"> Return to search</a>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page with appropriate warning text, no radio options, and a button linking back to the add linked appeal reference page with label text of "return to search", if the linking target is a child and the linking candidate has no existing linked appeals 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Details of the appeal you&#39;re linking to</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> Link this appeal to
                    your case&#39;s lead appeal.</strong>
            </div>
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                    <dd class="govuk-summary-list__value">TEST-12345</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal status</dt>
                    <dd class="govuk-summary-list__value">Assign case officer</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                    <dd class="govuk-summary-list__value">Householder</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                    <dd class="govuk-summary-list__value">96 The Avenue, Maidstone, Kent, MD21 5XY</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                    <dd                     class="govuk-summary-list__value">Wiltshire Council</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                    <dd class="govuk-summary-list__value">Roger Simmons</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                    <dd class="govuk-summary-list__value">Eva Sharma (Eva Sharma Ltd)</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Submission date</dt>
                    <dd class="govuk-summary-list__value">21 February 2024</dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate"><a href="/appeals-service/appeal-details/1/linked-appeals/add" role="button"
                        draggable="false" class="govuk-button" data-module="govuk-button"> Return to search</a>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page with appropriate warning text, no radio options, and a button linking back to the add linked appeal reference page with label text of "return to search", if the linking target is a child appeal and the linking candidate is a child appeal 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Details of the appeal you&#39;re linking to</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> Appeal already linked
                    to another lead appeal. Cannot be linked.</strong>
            </div>
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                    <dd class="govuk-summary-list__value">TEST-12345</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal status</dt>
                    <dd class="govuk-summary-list__value">Assign case officer</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                    <dd class="govuk-summary-list__value">Householder</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                    <dd class="govuk-summary-list__value">96 The Avenue, Maidstone, Kent, MD21 5XY</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                    <dd                     class="govuk-summary-list__value">Wiltshire Council</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                    <dd class="govuk-summary-list__value">Roger Simmons</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                    <dd class="govuk-summary-list__value">Eva Sharma (Eva Sharma Ltd)</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Submission date</dt>
                    <dd class="govuk-summary-list__value">21 February 2024</dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate"><a href="/appeals-service/appeal-details/1/linked-appeals/add" role="button"
                        draggable="false" class="govuk-button" data-module="govuk-button"> Return to search</a>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page with appropriate warning text, no radio options, and a button linking back to the add linked appeal reference page with label text of "return to search", if the linking target is a lead and the linking candidate is a child of another appeal 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Details of the appeal you&#39;re linking to</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> Appeal already linked
                    to another lead appeal. Cannot be linked.</strong>
            </div>
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                    <dd class="govuk-summary-list__value">TEST-12345</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal status</dt>
                    <dd class="govuk-summary-list__value">Assign case officer</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                    <dd class="govuk-summary-list__value">Householder</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                    <dd class="govuk-summary-list__value">96 The Avenue, Maidstone, Kent, MD21 5XY</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                    <dd                     class="govuk-summary-list__value">Wiltshire Council</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                    <dd class="govuk-summary-list__value">Roger Simmons</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                    <dd class="govuk-summary-list__value">Eva Sharma (Eva Sharma Ltd)</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Submission date</dt>
                    <dd class="govuk-summary-list__value">21 February 2024</dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate"><a href="/appeals-service/appeal-details/1/linked-appeals/add" role="button"
                        draggable="false" class="govuk-button" data-module="govuk-button"> Return to search</a>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page with appropriate warning text, no radio options, and a button linking back to the add linked appeal reference page with label text of "return to search", if the target and candidate are the same appeal (trying to link appeal to itself) 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Details of the appeal you&#39;re linking to</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> This is the appeal you
                    are currently reviewing.</strong>
            </div>
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                    <dd class="govuk-summary-list__value">APP/Q9999/D/21/351062</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal status</dt>
                    <dd class="govuk-summary-list__value">Assign case officer</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                    <dd class="govuk-summary-list__value">Householder</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                    <dd class="govuk-summary-list__value">96 The Avenue, Maidstone, Kent, MD21 5XY</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                    <dd                     class="govuk-summary-list__value">Wiltshire Council</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                    <dd class="govuk-summary-list__value">Roger Simmons</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                    <dd class="govuk-summary-list__value">Eva Sharma (Eva Sharma Ltd)</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Submission date</dt>
                    <dd class="govuk-summary-list__value">21 February 2024</dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate"><a href="/appeals-service/appeal-details/1/linked-appeals/add" role="button"
                        draggable="false" class="govuk-button" data-module="govuk-button"> Return to search</a>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page with child and cancel radio options, and a submit button with label text of "Continue", if the linking target is a lead and the candidate has no existing linked appeals 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Details of the appeal you&#39;re linking to</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                    <dd class="govuk-summary-list__value">TEST-12345</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal status</dt>
                    <dd class="govuk-summary-list__value">Assign case officer</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                    <dd class="govuk-summary-list__value">Householder</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                    <dd class="govuk-summary-list__value">96 The Avenue, Maidstone, Kent, MD21 5XY</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                    <dd                     class="govuk-summary-list__value">Wiltshire Council</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                    <dd class="govuk-summary-list__value">Roger Simmons</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                    <dd class="govuk-summary-list__value">Eva Sharma (Eva Sharma Ltd)</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Submission date</dt>
                    <dd class="govuk-summary-list__value">21 February 2024</dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Is this the appeal you want to link?</legend>
                                <div class="govuk-radios"
                                data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="confirmation" name="confirmation"
                                        type="radio" value="child">
                                        <label class="govuk-label govuk-radios__label" for="confirmation">Yes, this is a child appeal of 351062</label>
                                    </div>
                                    <div class="govuk-radios__divider">or</div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="confirmation-3" name="confirmation"
                                        type="radio" value="cancel">
                                        <label class="govuk-label govuk-radios__label" for="confirmation-3">No, return to search</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page with lead and cancel radio options, and a submit button with label text of "Continue", if the linking candidate is a lead and the target has no existing linked appeals 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Details of the appeal you&#39;re linking to</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                    <dd class="govuk-summary-list__value">TEST-12345</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal status</dt>
                    <dd class="govuk-summary-list__value">Assign case officer</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                    <dd class="govuk-summary-list__value">Householder</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                    <dd class="govuk-summary-list__value">96 The Avenue, Maidstone, Kent, MD21 5XY</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                    <dd                     class="govuk-summary-list__value">Wiltshire Council</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                    <dd class="govuk-summary-list__value">Roger Simmons</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                    <dd class="govuk-summary-list__value">Eva Sharma (Eva Sharma Ltd)</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Submission date</dt>
                    <dd class="govuk-summary-list__value">21 February 2024</dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Is this the appeal you want to link?</legend>
                                <div class="govuk-radios"
                                data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="confirmation" name="confirmation"
                                        type="radio" value="lead">
                                        <label class="govuk-label govuk-radios__label" for="confirmation">Yes, make this the lead appeal for 351062</label>
                                    </div>
                                    <div class="govuk-radios__divider">or</div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="confirmation-3" name="confirmation"
                                        type="radio" value="cancel">
                                        <label class="govuk-label govuk-radios__label" for="confirmation-3">No, return to search</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page with lead, child and cancel radio options, and a submit button with label text of "Continue", if neither the linking target nor the candidate have existing linked appeals 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Details of the appeal you&#39;re linking to</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                    <dd class="govuk-summary-list__value">TEST-12345</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal status</dt>
                    <dd class="govuk-summary-list__value">Assign case officer</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                    <dd class="govuk-summary-list__value">Householder</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                    <dd class="govuk-summary-list__value">96 The Avenue, Maidstone, Kent, MD21 5XY</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                    <dd                     class="govuk-summary-list__value">Wiltshire Council</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                    <dd class="govuk-summary-list__value">Roger Simmons</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                    <dd class="govuk-summary-list__value">Eva Sharma (Eva Sharma Ltd)</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Submission date</dt>
                    <dd class="govuk-summary-list__value">21 February 2024</dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Is this the appeal you want to link?</legend>
                                <div class="govuk-radios"
                                data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="confirmation" name="confirmation"
                                        type="radio" value="lead">
                                        <label class="govuk-label govuk-radios__label" for="confirmation">Yes, make this the lead appeal for 351062</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="confirmation-2" name="confirmation"
                                        type="radio" value="child">
                                        <label class="govuk-label govuk-radios__label" for="confirmation-2">Yes, this is a child appeal of 351062</label>
                                    </div>
                                    <div class="govuk-radios__divider">or</div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="confirmation-4" name="confirmation"
                                        type="radio" value="cancel">
                                        <label class="govuk-label govuk-radios__label" for="confirmation-4">No, return to search</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/manage should render the manage linked appeals page with the expected content when the appeal is a child 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Manage linked appeals</h1>
        </div>
    </div>
    <div class="govuk-!-margin-bottom-2"><strong class="govuk-tag govuk-tag--grey single-line">Child</strong>
    </div>
    <h2 class="govuk-!-margin-top-6">Lead appeal of 351062</h2>
    <table class="govuk-table">
        <thead class="govuk-table__head">
            <tr class="govuk-table__row">
                <th scope="col" class="govuk-table__header">Appeal Ref</th>
                <th scope="col" class="govuk-table__header">Appeal type</th>
                <th scope="col" class="govuk-table__header govuk-!-text-align-right">Action</th>
            </tr>
        </thead>
        <tbody class="govuk-table__body">
            <tr class="govuk-table__row">
                <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/3" aria-label="Appeal 7 2 5 2 8 4">725284</a>
                </td>
                <td class="govuk-table__cell">Householder</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a class="govuk-link" href="/appeals-service/appeal-details/1/linked-appeals/unlink-appeal/2/3048/2">Unlink<span class="govuk-visually-hidden"> appeal 7 2 5 2 8 4</span></a>
                </td>
            </tr>
        </tbody>
    </table>
    <h2 class="govuk-!-margin-top-6">Other child appeals of 351062</h2>
    <table class="govuk-table">
        <thead class="govuk-table__head">
            <tr class="govuk-table__row">
                <th scope="col" class="govuk-table__header">Appeal Ref</th>
                <th scope="col" class="govuk-table__header">Appeal type</th>
                <th scope="col" class="govuk-table__header govuk-!-text-align-right">Action</th>
            </tr>
        </thead>
        <tbody class="govuk-table__body">
            <tr class="govuk-table__row">
                <td class="govuk-table__cell"><a class="govuk-link" href="https://test-horizon-url.gov.uk?appealId=3"
                    data-cy="76215416">76215416</a>
                </td>
                <td class="govuk-table__cell">Commercial</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a class="govuk-link" data-cy="unlink-appeal-APP/Q9999/D/21/351062" href="/appeals-service/appeal-details/1/linked-appeals/unlink-appeal/3/1/2">Unlink<span class="govuk-visually-hidden"> appeal 7 6 2 1 5 4 1 6</span></a>
                </td>
            </tr>
        </tbody>
    </table>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/manage should render the manage linked appeals page with the expected content when the appeal is a lead 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Manage linked appeals</h1>
        </div>
    </div>
    <div class="govuk-!-margin-bottom-2"><strong class="govuk-tag govuk-tag--grey single-line">Lead</strong>
    </div>
    <h2 class="govuk-!-margin-top-6">Child appeals of 351062</h2>
    <table class="govuk-table">
        <thead class="govuk-table__head">
            <tr class="govuk-table__row">
                <th scope="col" class="govuk-table__header">Appeal Ref</th>
                <th scope="col" class="govuk-table__header">Appeal type</th>
                <th scope="col" class="govuk-table__header govuk-!-text-align-right">Action</th>
            </tr>
        </thead>
        <tbody class="govuk-table__body">
            <tr class="govuk-table__row">
                <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/2" aria-label="Appeal 7 2 5 2 8 4"
                    data-cy="APP/Q9999/D/21/725284">725284</a>
                </td>
                <td class="govuk-table__cell">Householder</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a class="govuk-link" data-cy="unlink-appeal-APP/Q9999/D/21/351062" href="/appeals-service/appeal-details/1/linked-appeals/unlink-appeal/2/1/1">Unlink<span class="govuk-visually-hidden"> appeal 7 2 5 2 8 4</span></a>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <td class="govuk-table__cell"><a class="govuk-link" href="https://test-horizon-url.gov.uk?appealId=3"
                    data-cy="76215416">76215416</a>
                </td>
                <td class="govuk-table__cell">Commercial</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a class="govuk-link" data-cy="unlink-appeal-APP/Q9999/D/21/351062" href="/appeals-service/appeal-details/1/linked-appeals/unlink-appeal/3/1/1">Unlink<span class="govuk-visually-hidden"> appeal 7 6 2 1 5 4 1 6</span></a>
                </td>
            </tr>
        </tbody>
    </table>
</main>"
`;

exports[`linked-appeals POST /change-appeal-type/unlink-appeal should re-render the unlink appeal page with the expected error message if yes or no are not selected 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#unlink-appeal">Please choose an option</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate=null>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Do you want to unlink the appeal 725284 from appeal 351062?</h1>
                        </legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="unlink-appeal" name="unlinkAppeal"
                                type="radio" value="yes">
                                <label class="govuk-label govuk-radios__label" for="unlink-appeal">Yes</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="unlink-appeal-2" name="unlinkAppeal"
                                type="radio" value="no">
                                <label class="govuk-label govuk-radios__label" for="unlink-appeal-2">No</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add should re-render the add linked appeal reference page with the expected error message if no reference was provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-reference">Enter an appeal reference</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> What is the appeal reference?</label></h1>
                            <input class="govuk-input govuk-input govuk-input--width-10" id="appeal-reference"
                            name="appeal-reference" type="text">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add should re-render the add linked appeal reference page with the expected error message if the provided appeal reference is greater than 7 digits 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-reference">Appeal reference must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> What is the appeal reference?</label></h1>
                            <input class="govuk-input govuk-input govuk-input--width-10" id="appeal-reference"
                            name="appeal-reference" type="text">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add should re-render the add linked appeal reference page with the expected error message if the provided appeal reference is less than 7 digits 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-reference">Appeal reference must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> What is the appeal reference?</label></h1>
                            <input class="govuk-input govuk-input govuk-input--width-10" id="appeal-reference"
                            name="appeal-reference" type="text">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add should re-render the add linked appeal reference page with the expected error message if the reference was provided but no matching appeal was found 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-reference">Enter a valid appeal reference</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> What is the appeal reference?</label></h1>
                            <input class="govuk-input govuk-input govuk-input--width-10" id="appeal-reference"
                            name="appeal-reference" type="text">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add/check-and-confirm should re-render the check and confirm page with the expected error message if no radio option was selected 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#confirmation">Choose an option</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Details of the appeal you&#39;re linking to</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                    <dd class="govuk-summary-list__value">TEST-12345</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal status</dt>
                    <dd class="govuk-summary-list__value">Assign case officer</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                    <dd class="govuk-summary-list__value">Householder</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                    <dd class="govuk-summary-list__value">96 The Avenue, Maidstone, Kent, MD21 5XY</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority (LPA)</dt>
                    <dd                     class="govuk-summary-list__value">Wiltshire Council</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                    <dd class="govuk-summary-list__value">Roger Simmons</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                    <dd class="govuk-summary-list__value">Eva Sharma (Eva Sharma Ltd)</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Submission date</dt>
                    <dd class="govuk-summary-list__value">21 February 2024</dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Is this the appeal you want to link?</legend>
                                <div class="govuk-radios"
                                data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="confirmation" name="confirmation"
                                        type="radio" value="lead">
                                        <label class="govuk-label govuk-radios__label" for="confirmation">Yes, make this the lead appeal for 351062</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="confirmation-2" name="confirmation"
                                        type="radio" value="child">
                                        <label class="govuk-label govuk-radios__label" for="confirmation-2">Yes, this is a child appeal of 351062</label>
                                    </div>
                                    <div class="govuk-radios__divider">or</div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="confirmation-4" name="confirmation"
                                        type="radio" value="cancel">
                                        <label class="govuk-label govuk-radios__label" for="confirmation-4">No, return to search</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
